Fixed assign button popover by wrapping the long title new line

--- a/app/assets/stylesheets/modules/_popover.styl
+++ b/app/assets/stylesheets/modules/_popover.styl
@@ -59,7 +59,11 @@
     td
       height auto
       padding 20px
-      white-space nowrap
+      width: 350px
+      max-width: 350px
+      word-wrap: break-word
+      white-space: normal
+      text-overflow: clip
       input
         margin-right 10px
         margin-top 0
